feat: tag html (wip)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello HTML</h1>
+
+   <!-- Tag H1 --> 
+    <section>
+            <h1>Hello HTML</h1>
+    </section>
+    <header>Questo è header</header>
+
+    <main>
+    <!--Sezione paragrafo -->
+    <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse vitae tempore voluptates eos nesciunt! Consequuntur quos consectetur eos rem, quia atque nemo eius neque numquam soluta adipisci quaerat voluptatem quibusdam.</p>
+    </section>
+    
+
+    <!--Sezione immagine -->
+    <section>
+        <img src="./img/abs-outdoor.JPG" 
+            width="200"
+            height="200"
+            alt="uomo che sta facendo gli addominali su un prato"/>
+        <!-- Iniziare sempre con il punto per il percorso dell'immagine -->
+    </section>
+</main>
+
 </body>
 </html>
