feat: inserimento delle liste

--- a/index.html
+++ b/index.html
@@ -28,6 +28,51 @@
             alt="uomo che sta facendo gli addominali su un prato"/>
         <!-- Iniziare sempre con il punto per il percorso dell'immagine -->
     </section>
+
+    <!--Linea orizzontale-->
+    <hr /> 
+
+    <!-- Sezione liste -->
+    <section>
+        <h2>Esempi delle liste</h2>
+
+        <!--Lista ordinata, quando l'ordine è importante-->
+        <h3>Lista di paesi ordinati per popolazione</h3>
+            <ol> 
+                <li>India</li>
+                <li>Cina</li>
+                <li>USA</li>
+            </ol>
+
+        <!-- Lista non ordinata -->
+        <h3>Lista della spesa</h3>
+            <ul>
+                <li>Mele</li>
+                <li>Latte</li>
+                <li>Pane</li>
+                <li>cetrioli</li>
+            </ul>
+
+        <!-- Lista annidata -->   
+        <h3>Lista di classi Boolean con lista interna di studenti</h3>
+            <ul>
+                <li>
+                    <h4>Classe 1</h4>
+                    <!--Lista interna-->
+                    <ul>
+                        <li>Pippo</li>
+                        <li>Pluto</li>
+                        <li>Paperino</li>
+                    </ul>
+                </li>
+                <li>Classe 2</li>
+                <li>Classe 3</li>
+            </ul>
+
+
+    </section>
+
+
 </main>
 
 </body>
