feat: tag della tabella

--- a/index.html
+++ b/index.html
@@ -68,8 +68,33 @@
                 <li>Classe 2</li>
                 <li>Classe 3</li>
             </ul>
+    </section>
 
-
+    <section>
+        <h3>Tabella</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Colonna1</th>
+                    <th>Colonna2</th>
+                    <th>Colonna3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Dato1</td>
+                    <td>Dato2</td>
+                    <td>Dato3</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Totale da pagare:</td>
+                    <td></td>
+                    <td>54</td>
+                </tr>
+            </tfoot>
+        </table>
     </section>
 
 
